Migration to Java 17, SpringBoot 3, Spring Security 6