@@ -1,39 +1,36 @@
 package com.bootcamp.project.eCommerce;
 
-import com.bootcamp.project.eCommerce.constants.ApplicationConstants;
-import com.bootcamp.project.eCommerce.pojos.userFlow.Customer;
+import com.bootcamp.project.eCommerce.constants.AppData;
 import com.bootcamp.project.eCommerce.pojos.userFlow.user.Address;
 import com.bootcamp.project.eCommerce.pojos.userFlow.user.GrantedAuthorityImpl;
 import com.bootcamp.project.eCommerce.pojos.userFlow.user.User;
 import com.bootcamp.project.eCommerce.repos.UserRepository;
 import lombok.AccessLevel;
+import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Component
+@RequiredArgsConstructor
 @FieldDefaults(level = AccessLevel.PRIVATE)
 public class ApplicationStartupBootstrap {
 
-    @Autowired
-    UserRepository userRepository;
-
-    @Autowired
-    PasswordEncoder passwordEncoder;
+    final UserRepository userRepository;
+    final PasswordEncoder passwordEncoder;
 
     @EventListener(ApplicationReadyEvent.class)
     public void runAfterStartup() {
         User user = userRepository.findByEmail("asthana.shubham99@gmail.com");
         if (user != null) {
-            ApplicationConstants.MASTER_ADMIN.setData("asthana.shubham99@gmail.com");
+            AppData.MASTER_ADMIN.setData("asthana.shubham99@gmail.com");
             return;
         }
-        if (ApplicationConstants.MASTER_ADMIN.getData() == null) {
+        if (AppData.MASTER_ADMIN.getData() == null) {
 
             User master_admin = new User();
 
@@ -41,7 +38,7 @@ public class ApplicationStartupBootstrap {
             master_admin.setFirstName("Shubham");
             master_admin.setLastName("Asthana");
             String password = passwordEncoder.encode("100Million$");
-            master_admin.setPassword(password);
+            master_admin.setPasswordHash(password);
 
             Address mAdmin_address = new Address();
             mAdmin_address.setCity("Lucknow");
@@ -50,17 +47,18 @@ public class ApplicationStartupBootstrap {
             mAdmin_address.setAddressLine("8/66 Vikas Nagar");
             mAdmin_address.setZipCode(226022);
             mAdmin_address.setLabel("Office");
+            master_admin.setContact("8888999900");
 
-            master_admin.setAddress(Arrays.asList(mAdmin_address));
+            master_admin.setAddresses(List.of(mAdmin_address));
 
             GrantedAuthorityImpl mAdmin_authority = new GrantedAuthorityImpl();
             mAdmin_authority.setAuthority("ROLE_ADMIN");
 
-            master_admin.setGrantedAuthorities(Arrays.asList(mAdmin_authority));
+            master_admin.setGrantedAuthorities(List.of(mAdmin_authority));
             master_admin.setIsActive(true);
 
             userRepository.save(master_admin);
-            ApplicationConstants.MASTER_ADMIN.setData("asthana.shubham99@gmail.com");
+            AppData.MASTER_ADMIN.setData("asthana.shubham99@gmail.com");
         }
     }
 }
